<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>xyz.geik.farmer</groupId>
    <artifactId>Farmer</artifactId>
    <version>v6-b100</version>

    <properties>
        <shaded.package>org.cas.osd.platform.ciam.shaded</shaded.package>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!-- Dependencies -->
    <dependencies>
        <!-- Spigot -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.20.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- FabledSkyblock -->
        <dependency>
            <groupId>com.craftaro</groupId>
            <artifactId>FabledSkyBlock</artifactId>
            <version>3.0.0-b6-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
            <scope>provided</scope>
        </dependency>
        <!-- SuperiorAPI -->
        <dependency>
            <groupId>com.bgsoftware</groupId>
            <artifactId>SuperiorSkyblockAPI</artifactId>
            <version>2022.9</version>
            <scope>provided</scope>
        </dependency>
        <!-- GriefPreventionAPI -->
        <dependency>
            <groupId>com.github.TechFortress</groupId>
            <artifactId>GriefPrevention</artifactId>
            <version>16.18</version>
            <scope>provided</scope>
        </dependency>
        <!-- BentoBox -->
        <dependency>
            <groupId>world.bentobox</groupId>
            <artifactId>bentobox</artifactId>
            <version>1.22.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- ASkyBlockAPI -->
        <dependency>
            <groupId>com.wasteofplastic</groupId>
            <artifactId>askyblock</artifactId>
            <version>3.0.9.4</version>
            <scope>provided</scope>
        </dependency>
        <!-- TownyAdvanced -->
        <dependency>
            <groupId>com.palmergames.bukkit.towny</groupId>
            <artifactId>towny</artifactId>
            <version>0.99.5.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- LandsAPI -->
        <dependency>
            <groupId>com.github.angeschossen</groupId>
            <artifactId>LandsAPI</artifactId>
            <version>6.37.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- WildStacker -->
        <dependency>
            <groupId>com.bgsoftware</groupId>
            <artifactId>WildStackerAPI</artifactId>
            <version>2022.6</version>
            <scope>provided</scope>
        </dependency>
        <!-- SpawnerMeta -->
        <dependency>
            <groupId>com.github.OfficialRell</groupId>
            <artifactId>SpawnerMeta</artifactId>
            <version>21.8</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.Geik-xyz</groupId>
            <artifactId>GLib</artifactId>
            <version>f2ac339684</version>
        </dependency>
        <!-- apache commons -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.13.0</version>
        </dependency>
        <!-- PlaceholderAPI -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.4</version>
            <scope>provided</scope>
        </dependency>
        <!-- Geyser -->
        <dependency>
            <groupId>org.geysermc.geyser</groupId>
            <artifactId>api</artifactId>
            <version>2.2.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <!-- Repos -->
    <repositories>
        <!-- FabledSkyblock -->
        <repository>
            <id>craftaro-minecraft-plugins</id>
            <url>https://repo.craftaro.com/repository/minecraft-plugins/</url>
        </repository>
        <!-- Jitpack Repo -->
        <repository>
            <id>jitpack.io</id>
            <url>https://www.jitpack.io</url>
        </repository>
        <!-- Spigot Repo -->
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <!-- MojangAPI Repo -->
        <repository>
            <id>minecraft-repo</id>
            <url>https://libraries.minecraft.net/</url>
        </repository>
        <!-- SuperiorAPI + WildStacker -->
        <repository>
            <id>bg-repo</id>
            <url>https://repo.bg-software.com/repository/api/</url>
        </repository>
        <!-- Bento -->
        <repository>
            <id>codemc-snapshots</id>
            <url>https://repo.codemc.org/repository/maven-snapshots</url>
        </repository>
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.org/repository/maven-public/</url>
        </repository>
        <!-- TownyAdvanced -->
        <repository>
            <id>glaremasters repo</id>
            <url>https://repo.glaremasters.me/repository/towny/</url>
        </repository>
        <!-- PlaceholderAPI -->
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <!-- PlayerPoints -->
        <repository>
            <id>rosewood-repo</id>
            <url>https://repo.rosewooddev.io/repository/public/</url>
        </repository>
        <!-- Geyser -->
        <repository>
            <id>opencollab-snapshot</id>
            <url>https://repo.opencollab.dev/main/</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <!-- Shade plugin for store dependency on jar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <minimizeJar>true</minimizeJar>
                    <relocations>
                        <relocation>
                            <pattern>xyz.geik.glib</pattern>
                            <shadedPattern>xyz.geik.farmer.shades.glib</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.jetbrains.annotations</pattern>
                            <shadedPattern>xyz.geik.farmer.shades.jetbrains</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>
        </plugins>
    </build>
</project>